--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -148,19 +148,19 @@
                 </div>
                 <div class="social-media" >
                     <a href="#" class="sm-link" alt="icon-twitter" target="_blank" title="twitter-icon">
-                        <i class="bx bxl-twitter">Twitter</i>
+                        <i class="bx bxl-twitter"></i>
                     </a>
                     <a href="#" class="sm-link" alt="icon-facebook" target="_blank" title="facebook-icon">
-                        <i class="bx bxl-facebook">Facebook</i>
+                        <i class="bx bxl-facebook"></i>
                     </a>
                     <a href="#" class="sm-link" alt="icon-instagram" target="_blank" title="instagram-icon">
-                        <i class="bx bxl-instagram">Instagram</i>
+                        <i class="bx bxl-instagram"></i>
                     </a>
                     <a href="#" class="sm-link" alt="icon-youtube" target="_blank" title="youtube-icon">
-                        <i class="bx bxl-youtube">Youtube</i>
+                        <i class="bx bxl-youtube"></i>
                     </a>
                     <a href="#" class="sm-link" alt="icon-linkedin" target="_blank" title="linkedin-icon">
-                        <i class="bx bxl-linkedin">Linkedin</i>
+                        <i class="bx bxl-linkedin"></i>
                     </a>
                 </div>
             </div>
@@ -192,8 +192,17 @@
                     <a href="#" class="footer-link">Download</a>
                     <a href="#" class="footer-link">Download</a>
                 </div>
-                <div class="divider"></div>
+                <div class="footer-links-group">
+                    <h5 class="footer-title">Product</h5>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                </div>
                </div>
+                <div class="divider"></div>
             </div>
             <div class="row container remove-grid">
                    <a href="../html/indexDiscord.html" class="logo">
