--- a/src/html/indexWeb.html
+++ b/src/html/indexWeb.html
@@ -18,16 +18,42 @@
 <body>
    <div class="grid-wrapper">
        <aside class="sidebar">
-
+         <span>4</span>
+         <span></span>
+         <span>1</span>
        </aside>
        <header class="master-header">
+           <div class="container">
+               <nav class="main-nav">
+                   <a href="../html/indexWeb.html" class="logo">
+                     <img src="../assets/platzi-logo.png" alt="logo" title="Logo" >
+                   </a>
 
+                   <ul class="nav-list">
+                       <li class="nav-item">
+                           <a href="#" class="nav-link"></a>
+                       </li>
+                       <li class="nav-item">
+                           <a href="#" class="nav-link"></a>
+                       </li>
+                       <li class="nav-item">
+                           <a href="#" class="nav-link"></a>
+                       </li>
+                       <li class="nav-item">
+                           <a href="#" class="nav-link"></a>
+                       </li>
+                       <li class="nav-item">
+                           <a href="#" class="nav-link"></a>
+                       </li>
+                   </ul>
+               </nav>
+           </div>
        </header>
        <main class="main-content">
 
        </main>
        <footer class="master-footer">
-           
+
        </footer>
    </div>
 
