--- a/src/html/siteWeb.html
+++ b/src/html/siteWeb.html
@@ -17,7 +17,44 @@
     <title>Site | LandingPage</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="main-nav">
+            <div class="logo">
+                <a href="../html/siteWeb.html" title="Logo" alt="Logo">
+                    <i class="fas fa-circle-notch"></i>Tech</a>
+            </div>
+            <div class="hamburger-menu">
+                <span class="bar"></span>
+            </div>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="../html/siteWeb.html" class="nav-link" title="Home" alt="home-nav" target="_blank">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../html/siteWeb.html" class="nav-link" target="_blank" alt="nav-tour">Tours</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../html/siteWeb.html" class="nav-link" target="_blank" alt="nav-location">Locations</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./siteWeb.html" class="nav-link" target="_blank" alt="nav-about">About</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-clipped">
+                <div class="hero-textbox">
+                    <h1 class="main-heading" alt="Title-One">Tech</h1>
+                    <h2 class="sub-heading" alt="Title-Two">Learn about our Tech Cloud</h2>
+                    <a href="https://es.wikipedia.org/wiki/Tecnolog%C3%ADa" alt="link" target="_blank">Learn More</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="" type="module"></script>
 </body>
 </html>
