--- a/src/html/siteWeb.html
+++ b/src/html/siteWeb.html
@@ -31,7 +31,7 @@
                     <a href="../html/siteWeb.html" class="nav-link" title="Home" alt="home-nav" target="_blank">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../html/siteWeb.html" class="nav-link" target="_blank" alt="nav-tour">Tours</a>
+                    <a href="../html/siteWeb.html" class="nav-link" target="_blank" alt="nav-tour">Cloud</a>
                 </li>
                 <li class="nav-item">
                     <a href="../html/siteWeb.html" class="nav-link" target="_blank" alt="nav-location">Locations</a>
@@ -47,7 +47,7 @@
         <section class="hero">
             <div class="hero-clipped">
                 <div class="hero-textbox">
-                    <h1 class="main-heading" alt="Title-One">Tech</h1>
+                    <h1 class="main-heading" alt="Title-One">Tech City</h1>
                     <h2 class="sub-heading" alt="Title-Two">Learn about our Tech Cloud</h2>
                     <a href="https://es.wikipedia.org/wiki/Tecnolog%C3%ADa" alt="link" target="_blank">Learn More</a>
                 </div>
@@ -55,6 +55,9 @@
         </section>
     </main>
 
-    <script src="" type="module"></script>
+    <footer>
+
+    </footer>
+    <script src="../js/index.js" type="module"></script>
 </body>
 </html>
