--- a/src/html/siteWeb.html
+++ b/src/html/siteWeb.html
@@ -49,7 +49,7 @@
                 <div class="hero-textbox">
                     <h1 class="main-heading" alt="Title-One">Tech City</h1>
                     <h2 class="sub-heading" alt="Title-Two">Learn about our Tech Cloud</h2>
-                    <a href="https://es.wikipedia.org/wiki/Tecnolog%C3%ADa" alt="link" target="_blank">Learn More</a>
+                    <a class="cta-btn" href="https://es.wikipedia.org/wiki/Tecnolog%C3%ADa" alt="link" target="_blank">Learn More</a>
                 </div>
             </div>
         </section>
