--- a/src/html/siteLight.html
+++ b/src/html/siteLight.html
@@ -17,17 +17,21 @@
     <title>Web | Light</title>
 </head>
 <body>
-    <header>
-        <nav></nav>
-    </header>
+    <div class="blurred-wrapper">
+        <header class="main-header container">
+          <a href="../html/siteLight.html" class="logo"><i class="far fa-play-circle"></i></a>
+          <a href="#" class="btn sign-up">Sign Up</a>
+        </header>
 
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
+        <section class="hero container">
+           <div class="content-wrapper">
+               <h5 class="tagline">More than just a wallet</h5>
+               <h1 class="title">Make paying easier by pay</h1>
+               <p class="message">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit architecto, quae blanditiis aut.</p>
+               <a href="#" class="btn cta">Learn more</a>
+           </div>
+        </section>
+    </div>
 
     <script src="" type="module"></script>
 </body>
