--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -17,7 +17,37 @@
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav class="main-nav">
+            <div class="logo">
+                <a href="#" title="logo" alt="logo">
+                    <i class="fab fa-rocketchat"></i>
+                    Life Technology
+                </a>
+            </div>
+            <div class="main-input">
+                <span class="search-icon"><i class="fas fa-search"></i></span>
+                <input type="text" placeholder="Búsquedas avanzadas">
+                <a href="#" class="micro-icon"><i class="fas fa-microphone"></i></a>
+            </div>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="">Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#">
+                        <picture>
+                            <img src="https://lh3.googleusercontent.com/ogw/ADGmqu87DwXN5SSV5GoVRA9LbU9w5AwL6T8Zu9iBweJc=s32-c-mo" alt="image-nav_icon">
+                        </picture>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -25,7 +55,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
     <script src="../js/indexApp.js" type="module"></script>
 </body>
