--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -26,7 +26,7 @@
             </div>
             <div class="main-input">
                 <span class="search-icon"><i class="fas fa-search"></i></span>
-                <input type="text" placeholder="Búsquedas avanzadas">
+                <input type="text" placeholder="Búsquedas...">
                 <a href="#" class="micro-icon"><i class="fas fa-microphone"></i></a>
             </div>
             <ul class="nav-list">
