--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -31,18 +31,18 @@
             </div>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="">Home</a>
+                    <a href="" alt="Home" title="Home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">Blog</a>
+                    <a href="#" alt="Blog" title="Blog">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">Us</a>
+                    <a href="#" alt="Us" title="Us">Us</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">
                         <picture>
-                            <img src="https://lh3.googleusercontent.com/ogw/ADGmqu87DwXN5SSV5GoVRA9LbU9w5AwL6T8Zu9iBweJc=s32-c-mo" alt="image-nav_icon">
+                            <img alt="picture" title="image_icon" src="https://lh3.googleusercontent.com/ogw/ADGmqu87DwXN5SSV5GoVRA9LbU9w5AwL6T8Zu9iBweJc=s32-c-mo" alt="image-nav_icon">
                         </picture>
                     </a>
                 </li>
