--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -47,6 +47,12 @@
                     </a>
                 </li>
             </ul>
+            <div class="nav-buttonn">
+                <button class="switch" id="switch">
+                    <span><i class="fas fa-sun"></i></span>
+                    <span><i class="fas fa-moon"></i></span>
+                </button>
+            </div>
         </nav>
     </header>
 
