--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -54,10 +54,19 @@
                 </button>
             </div>
         </nav>
+
+        <div class="header-text">
+            <h1>Life Technology</h1>
+        </div>
+        <div class="parr">
+            <p class="parrafo">Technology and future</p>
+        </div>
     </header>
 
     <main>
-        <section></section>
+        <section class="main-section">
+
+        </section>
     </main>
 
     <footer>
