--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -63,11 +63,20 @@
         </div>
     </header>
 
-    <main>
-        <section class="main-section">
-
+    <main class="main">
+        <section class="main-image">
+               <img src="../assets/img/undraw_My_universe_re_txot.svg" alt="image-section">
+        </section>
+        <section class="main-text">
+            <h1>Un lugar para miembros y apasionados en tecnología</h1>
+        </section>
+        <section class="text-parr">
+            <p>Los servidores de Discord se organizan en canales ordenados por temas donde puedes colaborar, compartir o simplemente hablar de tu día sin monopolizar un chat de grupo.</p>
         </section>
     </main>
+    <section class="grid">
+     
+    </section>
 
     <footer>
 
