--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -74,8 +74,19 @@
             <p>Los servidores de Discord se organizan en canales ordenados por temas donde puedes colaborar, compartir o simplemente hablar de tu día sin monopolizar un chat de grupo.</p>
         </section>
     </main>
-    <section class="grid">
-     
+    <section class="container">
+            <div class="bg1">
+                <h2>Image | Tech</h2>
+            </div>
+            <div class="bg2">
+                <h2>Image | Tech</h2>
+            </div>
+            <div class="bg3">
+                <h2>Image | Tech</h2>
+            </div>
+            <div class="bg4">
+                <h2>Image | Tech</h2>
+            </div>
     </section>
 
     <footer>
