--- a/src2/html/animate.html
+++ b/src2/html/animate.html
@@ -65,7 +65,7 @@
 
     <main class="main">
         <section class="main-image">
-               <img src="../assets/img/undraw_My_universe_re_txot.svg" alt="image-section">
+               <img src="../assets/img/undraw_My_universe_re_txot.svg" target="_blank" title="image" alt="image-section">
         </section>
         <section class="main-text">
             <h1>Un lugar para miembros y apasionados en tecnología</h1>
@@ -76,21 +76,21 @@
     </main>
     <section class="container">
             <div class="bg1">
-                <h2>Image | Tech</h2>
+                <h2>Image | Tech <span><i class="fas fa-camera-retro"></i></span></h2>
             </div>
             <div class="bg2">
-                <h2>Image | Tech</h2>
+                <h2>Image | Tech <span><i class="fas fa-camera-retro"></i></span></h2>
             </div>
             <div class="bg3">
-                <h2>Image | Tech</h2>
+                <h2>Image | Tech <span><i class="fas fa-camera-retro"></i></span></h2>
             </div>
             <div class="bg4">
-                <h2>Image | Tech</h2>
+                <h2>Image | Tech <span><i class="fas fa-camera-retro"></i></span></h2>
             </div>
     </section>
 
     <footer>
-
+       <p>Copyright</p>
     </footer>
     <script src="../js/indexApp.js" type="module"></script>
 </body>
